<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hezra.wingsnsides.Contact.ContactFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/thumbnail1"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_alignParentTop="true"
                        android:layout_margin="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo_main" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/thumbnail1"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:maxLines="3"
                            android:padding="8dp"
                            android:text="@string/who_we_are"
                            android:textColor="#222"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Email :"
                                android:textColor="#222"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/title2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:maxLines="3"
                                android:padding="8dp"
                                android:text="@string/contact_email_id"
                                android:textColor="#222"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/hezra_about"
                            android:textColor="#666"
                            android:textSize="16sp" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

</FrameLayout>
